Shortened a Stream function across many classes.