@@ -3,9 +3,9 @@ package gov.nysenate.openleg.api.legislation.calendar.view;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import gov.nysenate.openleg.api.ListView;
 import gov.nysenate.openleg.api.MapView;
+import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
 import gov.nysenate.openleg.legislation.calendar.CalendarSupplemental;
 import gov.nysenate.openleg.spotchecks.alert.calendar.CalendarEntryListId;
-import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
 
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -21,7 +21,7 @@ public class CalendarSupView extends SimpleCalendarSupView implements CalendarEn
                         .map(entryList -> entryList.stream()
                                 .map(entry -> new CalendarSupEntryView(entry, billDataService))
                                 .sorted(CalendarSupEntryView.supEntryViewComparator)
-                                .collect(Collectors.toList()))
+                                .toList())
                         .map(ListView::of)
                         .collect(Collectors.toMap(list -> list.getItems().get(0).getSectionType(), Function.identity()))
         );
