@@ -1,12 +1,10 @@
 package gov.nysenate.openleg.api.processor.view;
 
-import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.ViewObject;
+import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.common.dao.PaginatedList;
 import gov.nysenate.openleg.processors.log.DataProcessRunInfo;
 import gov.nysenate.openleg.processors.log.DataProcessUnit;
-
-import static java.util.stream.Collectors.toList;
 
 public class DataProcessRunDetailView extends DataProcessRunInfoView implements ViewObject
 {
@@ -18,7 +16,7 @@ public class DataProcessRunDetailView extends DataProcessRunInfoView implements 
         super(runInfo);
         if (units != null) {
             this.details = ListViewResponse.of(
-                units.getResults().stream().map(DataProcessUnitView::new).collect(toList()),
+                units.getResults().stream().map(DataProcessUnitView::new).toList(),
                 units.getTotal(), units.getLimOff());
         }
     }
