@@ -20,7 +20,6 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDateTime;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
@@ -78,6 +77,6 @@ public class TranscriptUpdatesCtrl extends BaseCtrl
         PaginatedList<TranscriptUpdateToken> updates = transcriptDao.transcriptsUpdatedDuring(range, SortOrder.ASC, limOff);
         return ListViewResponse.of(updates.getResults().stream()
                 .map(TranscriptUpdateTokenView::new)
-                .collect(Collectors.toList()), updates.getTotal(), limOff);
+                .toList(), updates.getTotal(), limOff);
     }
 }
