@@ -3,8 +3,8 @@ package gov.nysenate.openleg.processors.bill.xml;
 import gov.nysenate.openleg.config.annotation.IntegrationTest;
 import gov.nysenate.openleg.legislation.bill.BaseBillId;
 import gov.nysenate.openleg.legislation.bill.Bill;
-import gov.nysenate.openleg.processors.BaseXmlProcessorTest;
 import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
+import gov.nysenate.openleg.processors.BaseXmlProcessorTest;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.slf4j.Logger;
@@ -13,11 +13,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.*;
 
 /**
  * Created by Robert Bebber on 3/20/17.
@@ -114,7 +111,7 @@ public class XmlBillStatProcessorIT extends BaseXmlProcessorTest {
         String actualTitle = baseBill.getTitle();
         assertEquals("Title Comparison: ", exTitle, actualTitle);
         assertNotNull("Actions shouldn't be null", baseBill.getActions());
-        List<String> actionStrings = baseBill.getActions().stream().map(String::valueOf).collect(Collectors.toList());
+        List<String> actionStrings = baseBill.getActions().stream().map(String::valueOf).toList();
         assertEquals("Actions should match expected", expectedBillActions, actionStrings);
     }
 }
